--- a/webapp/src/stylesheets/main.css
+++ b/webapp/src/stylesheets/main.css
@@ -1,3 +1,12 @@
 .errorMessage {
   color: red;
 }
+
+.logo-img {
+  border-radius: 16px;
+  object-fit: cover;
+}
+
+.search-form {
+  max-width: 200px;
+}
